# cmscript

./: .gitignore  CMakeLists.txt  README.md  sim.drawio
cmake/: cmscript.cmake  cmscript.cmake.in  entry.cmake  globalScript.cmake  init.cmake  main.cmake  msvc.cmake  packages.cmake  previous.cmake  set.cmake  target.cmake  thirdlib.cmake
cmake/test/: com.cmake  echo.cmake  find.cmake  func.cmake  macro.cmake  regex.cmake
docs/compiler/: common.md
docs/compiler/GNU/: flags.md
docs/compiler/MSVC/: flags.md
template/export_independent_tags/: CMakeLists.txt  README.md
template/export_independent_tags/cmake/: cloudkit.cmake.in  config.cmake  generate.cmake
template/export_independent_tags/cmake/Modules/: FindGperftools.cmake  FindLASTools.cmake
